Add new draw: coin
The new draw can either return coin or tail.
The result type is an array due to issues in the framework serializing
bare strings.
